--- a/station/src/Aevatar.HttpApi.Host/appsettings.ephemeral.json
+++ b/station/src/Aevatar.HttpApi.Host/appsettings.ephemeral.json
@@ -1,5 +1,5 @@
 {
   "App": {
-    "CorsOrigins": "http://localhost:5173,http://localhost:5174,http://localhost:3000,https://*.aevatar.ai"
+    "CorsOrigins": "http://localhost:5173,http://localhost:5174,http://localhost:3000,http://*.aevatar.ai,https://*.aevatar.ai"
   }
 }
