fix: remove host_silo_image_tag and host_client_image_tag arguments

--- a/.github/workflows/ephemeral-test-env.yaml
+++ b/.github/workflows/ephemeral-test-env.yaml
@@ -18,7 +18,7 @@ on:
       frontend_branch:
         description: 'Branch to deploy'
         type: string
-        default: 'main'
+        default: 'develop'
       
       
 run-name: Run Aevatar Station Ephemeral Test Environment on ${{ github.ref_name }} from ${{ github.sha }}
@@ -153,8 +153,6 @@ jobs:
               environment_ttl: "${{ inputs.environment_ttl }}",
               client_id: "${{ steps.generate-uuid.outputs.client_id }}",
               client_secret: "${{ steps.generate-uuid.outputs.client_secret }}",
-              host_silo_image_tag: "sha-${{ needs.build-and-push-image.outputs.short_sha }}",
-              host_client_image_tag: "sha-${{ needs.build-and-push-image.outputs.short_sha }}",
               station_image_tag: "sha-${{ needs.build-and-push-image.outputs.short_sha }}",
               cors_urls: "${{ inputs.cors_urls }}"
             };
