--- a/station/src/Aevatar.Silo/Aevatar.Silo.csproj
+++ b/station/src/Aevatar.Silo/Aevatar.Silo.csproj
@@ -30,6 +30,7 @@
         <PackageReference Include="Serilog.Sinks.OpenTelemetry" />
         <PackageReference Include="Orleans.Streams.Kafka" />
         <PackageReference Include="Volo.Abp.BlobStoring.Aws" />
+        <PackageReference Include="Aevatar.GAgents.MCP" />
     </ItemGroup>
 
     <ItemGroup>
