fix:fix configuration loading and ephemeral-test-env-update.yaml

--- a/.github/workflows/ephemeral-test-env-update.yaml
+++ b/.github/workflows/ephemeral-test-env-update.yaml
@@ -176,6 +176,7 @@ jobs:
           push: true
           build-args: |
             servicename=${{ matrix.servicename }}
+            ENABLE_EPHEMERAL_CONFIG=true
           platforms: linux/amd64
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
