initial commit of sandbox code execution

--- a/station/src/Aevatar.Kubernetes/Aevatar.Kubernetes.csproj
+++ b/station/src/Aevatar.Kubernetes/Aevatar.Kubernetes.csproj
@@ -18,6 +18,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\Aevatar.Kubernetes.Abstractions\Aevatar.Kubernetes.Abstractions.csproj" />
       <ProjectReference Include="..\Aevatar.WebHook.Deploy\Aevatar.WebHook.Deploy.csproj" />
       <ProjectReference Include="..\Aevatar.Domain.Shared\Aevatar.Domain.Shared.csproj" />
       <ProjectReference Include="..\Aevatar.Application.Grains\Aevatar.Application.Grains.csproj" />
