--- a/Dockerfile.benchmark-unified
+++ b/Dockerfile.benchmark-unified
@@ -2,25 +2,17 @@
 FROM mcr.microsoft.com/dotnet/sdk:9.0-alpine AS build
 WORKDIR /src
 
-# Copy all benchmark projects at once
-COPY ["station/benchmark/BroadcastLatencyBenchmark/BroadcastLatencyBenchmark.csproj", "station/benchmark/BroadcastLatencyBenchmark/"]
-COPY ["station/benchmark/LatencyBenchmark/LatencyBenchmark.csproj", "station/benchmark/LatencyBenchmark/"]
-
-# Copy shared dependencies
-COPY ["station/src/Aevatar.Core.Abstractions/Aevatar.Core.Abstractions.csproj", "station/src/Aevatar.Core.Abstractions/"]
-COPY ["station/src/Aevatar.Core/Aevatar.Core.csproj", "station/src/Aevatar.Core/"]
-COPY ["station/src/Aevatar.TestKit/Aevatar.TestKit.csproj", "station/src/Aevatar.TestKit/"]
+# Copy everything needed for benchmark builds
+COPY framework/ framework/
+COPY station/ station/
 
 # Restore packages for all benchmarks
 RUN dotnet restore "station/benchmark/BroadcastLatencyBenchmark/BroadcastLatencyBenchmark.csproj"
 RUN dotnet restore "station/benchmark/LatencyBenchmark/LatencyBenchmark.csproj"
 
-# Copy all source code
-COPY . .
-
-# Build all benchmarks to separate directories
-RUN dotnet build "station/benchmark/BroadcastLatencyBenchmark/BroadcastLatencyBenchmark.csproj" -c Release -o /app/broadcast
-RUN dotnet build "station/benchmark/LatencyBenchmark/LatencyBenchmark.csproj" -c Release -o /app/latency
+# Publish all benchmarks to separate directories
+RUN dotnet publish "station/benchmark/BroadcastLatencyBenchmark/BroadcastLatencyBenchmark.csproj" -c Release -o /app/broadcast --no-restore
+RUN dotnet publish "station/benchmark/LatencyBenchmark/LatencyBenchmark.csproj" -c Release -o /app/latency --no-restore
 
 # Runtime image
 FROM mcr.microsoft.com/dotnet/aspnet:9.0-alpine AS runtime
