fix: restore signalR dependency for benchmark container
- E2E.Grains (used by both benchmarks) has direct reference to Aevatar.SignalR
- Dependency chain: BroadcastLatencyBenchmark -> E2E.Grains -> Aevatar.SignalR
- Dependency chain: LatencyBenchmark -> E2E.Grains -> Aevatar.SignalR
- Restore COPY signalR/ signalR/ for successful dotnet restore

Fixes GitHub Actions build failure in build-unified-benchmark-image job

--- a/Dockerfile.benchmark-unified
+++ b/Dockerfile.benchmark-unified
@@ -4,6 +4,7 @@ WORKDIR /src
 
 # Copy everything needed for benchmark builds
 COPY framework/ framework/
+COPY signalR/ signalR/
 COPY station/ station/
 
 # Restore packages for all benchmarks
